# MotionExtraction

./: Cargo.toml  README.md
src/: main.rs
src/shaders/: shader.wgsl
