[package]
name = "motion-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
mozjpeg = "0.10.9"
nokhwa = { version = "0.10.4", features = [
    "input-native",
], default-features = false }
softbuffer = "0.4.5"
winit = "0.29"
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
image = "0.24"
pollster = "0.2"
wgpu = "22.1.0"
